--- a/styles.css
+++ b/styles.css
@@ -1,86 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Aleo:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-body{
-    margin:0; 
-    padding:3px;
-    box-sizing: border-box;
-    user-select: none;
-    font-family: 'Aleo', serif;
-    background: #cc2b5e;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #753a88, #cc2b5e);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #753a88, #cc2b5e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.contenedor{
-    background: #fff;
-    color: #000;
-    border-radius: 25px;
-    width: 400px;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    top: 50%;
-    left: 50%;
-    padding: 10px;
+body {
+  user-select: none;
+  font-family: "Roboto", sans-serif;
+  /* background: #cc2b5e; fallback for old browsers */
 }
 
-#set{
-    display: block ;
-    position: relative;
-    margin: auto;
+.container {
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(255, 255, 255, 0.75);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.3);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 320px;
+  height: 250px;
 }
 
-#largo{
-   display: inline-block;
-   position: relative ;
-   margin: 4%; 
-   margin-bottom: 2%;
-   color:#000; 
-   font-size: 18px;
-   text-indent: 40px;
-   font-weight: bolder;
+input {
+  padding: 10px;
+  border-radius: 12px;
+  text-align: center;
 }
 
-#ver{
-    color: #753a88;
-    position: absolute;
-    font-size: 1.5em;
-    top: 14px;
-    left: 320px;
-    cursor: pointer;
-    transition: .2s;
+#ver {
+  color: #333;
+  cursor: pointer;
 }
 
-input[id='password']{
-    border: none; 
-    width:80%;
-    outline: none;
-    padding: 10px;
-    border-bottom: 5px solid #753a88;
-    display: block; 
-    position: relative;
-    font-size: 30px;
-    text-align: center;
-    top: 20px;
-    margin: 20px auto ;
-    user-select: auto;
-    font-family: 'Slabo 27px', serif;
-    transition-duration: 600ms;
-}
-
-#validar0, #validar1, #validar2, #validar3, #validar4{
-   display: block;
-   position: relative;
-   margin: 4%;
-   font-size: 18px;
-   width: 92%;
-   text-align: justify;
-   color: rgb(255, 255, 255);
-}
-
-span{
-    margin: 10px;
-}
-
-input:hover{
-    border-bottom: 5px solid #cc2b5e;
-}
