--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
 body {
-  user-select: none;
   font-family: "Roboto", sans-serif;
-  background: #cc2b8e;
+  background: #ff0084;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #33001b, #ff0084);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #33001b, #ff0084);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .container {
@@ -23,8 +28,12 @@ input {
   border: none;
   outline: none;
   padding: 10px;
+  border-radius: 12px 0px 0px 12px;
 }
 
+#ver {
+  
+}
 
 .largo__de__contra {
   padding: 10px;
@@ -56,7 +65,7 @@ input {
   padding: 5px;
   font-size: 0.9rem;
   color: #555;
-  
+
 }
 
 .icon:before {
