--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,17 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background: #00c6ff;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #00c6ff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #0072ff,
+    #00c6ff
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #0072ff,
+    #00c6ff
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .container {
@@ -66,7 +74,6 @@ input {
   padding: 0px;
   color: #555;
   margin-top: 14px;
-  
 }
 
 .icon:before {
@@ -80,4 +87,8 @@ input {
 
 .icon.fa-times-circle {
   color: red;
+}
+
+.flexInput {
+  display: flex;
 }
